# LTCG

./: .convexignore  .editorconfig  .env.example  .env.test.example  .env.vercel  .gitignore  .lintstagedrc.json  AGENTS.md  ARCHITECTURE.md  Anchor.toml  BCRYPT_IMPLEMENTATION_SUMMARY.md  CI_CD_IMPLEMENTATION_COMPLETE.md  CI_CD_QUICK_START.md  CLAUDE.md  CLAWHUB_SUBMISSION.md  CONTRIBUTING.md  CONVEX_BACKEND_ASSESSMENT.md  CONVEX_BACKEND_REASSESSMENT.md  CONVEX_FINAL_ASSESSMENT_2026.md  CORS_SECURITY_UPDATE.md  CRUD_IMPLEMENTATION_SUMMARY.md  CUSTOM_AUTH_IMPLEMENTATION_SUMMARY.md  DEBUGGING_GUIDE.md  DEBUGGING_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_DELIVERABLES.md  DOCUMENTATION_SUMMARY.md  E2E_TESTING.md  E2E_TEST_FIXES.md  E2E_TEST_SUITE_SUMMARY.md  FINAL_TEST_VALIDATION.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_COMPLETE.md  INTEGRATION_TEST_FIXES.md  LIVE_STATS_IMPLEMENTATION.md  LunchTable_PRD_v1.docx  MIGRATION_CHECKLIST.md  MIGRATION_SUMMARY.md  MUTATION_MIGRATION_GUIDE.md  PAGINATION_REFACTOR_SUMMARY.md  PUBLISHING_COMPLETE.md  (+44 more)
.claude/: README.md
.github/: CODEOWNERS  pull_request_template.md
.husky/: pre-commit  pre-push
convex/: .convexignore  AGENT_GAMEPLAY_GUIDE.md  N+1_OPTIMIZATION_GUIDE.md  PAGINATION_GUIDE.md  PAGINATION_QUICK_REF.md  RLS_MIGRATION_GUIDE.md  (+63 more)
convex-tests/: rls.test.ts  schema.ts  setup.ts  test.setup.ts
programs/match-escrow/: Cargo.toml
programs/match-escrow/src/: constants.rs  error.rs  lib.rs  state.rs
programs/match-escrow/src/instructions/: confirm_deposit.rs  deposit.rs  forfeit.rs  initialize.rs  mod.rs  settle.rs
(+1569 files in other folders)
