[package]
name = "match-escrow"
version = "0.1.0"
description = "Onchain match escrow for SOL/USDC wagers with 10% treasury fee"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "match_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"

# Pin to avoid edition2024 incompatibility with platform-tools Cargo
# See: https://github.com/solana-foundation/anchor/issues/3606
bytemuck_derive = "=1.8.1"
blake3 = "=1.5.5"
